Bug 340859 - Implement pathLength attribute. Patch by amenzie@us.ibm.com, r=tor, sr=roc.